--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "html.preview.scrollEditorWithPreview": false
+    "html.preview.scrollEditorWithPreview": false,
+    "html.preview.scrollPreviewWithEditor": false
 }
